# mddux

./: Cargo.toml  LICENSE-MIT  README.md  README.spec.md
.github/workflows/: ci.yml  weekly.yml
src/: cmark.rs  config.rs  console.rs  executor.rs  formatter.rs  main.rs  parser.rs  runner.rs  util.rs
src/markdown/: formatter.rs  mod.rs  parser.rs
tests/: command.rs
tests/fixtures/: example.console  example.expected.console  example.md  example.spec.md
