[package]
name = "mddux"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.66"
bstr = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
comrak = { version = "0.14.0", default-features = false }
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.19"
yaml-rust = "0.4.5"
