[package]
name = "mddux"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "a CLI tool for executing Markdown documents with command and control"
authors = ["taskie <t@skie.jp>"]
keywords = ["markdown"]
readme = "README.md"
repository = "https://github.com/taskie/mddux"

[dependencies]
anyhow = "1.0.66"
base64 = "0.21.0"
clap = { version = "4.1.8", features = ["derive"] }
comrak = { version = "0.14.0", default-features = false }
env_logger = "0.10.0"
itertools = "0.10.5"
linked-hash-map = "0.5.6"
log = "0.4.17"
rexpect = "0.5.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.19"
twox-hash = "1.6.3"
yaml-rust = "0.4.5"
