[package]
name = "mddux"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "a CLI tool for executing Markdown documents with command and control"
authors = ["taskie <t@skie.jp>"]
keywords = ["markdown"]
readme = "README.md"
repository = "https://github.com/taskie/mddux"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.66"
base64 = "0.21.0"
clap = { version = "4.1.8", features = ["derive"] }
comrak = { version = "0.16.0", default-features = false }
env_logger = "0.10.0"
itertools = "0.10.5"
linked-hash-map = "0.5.6"
log = "0.4.17"
rexpect = "0.5.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.19"
strfmt = "0.2.4"
tempfile = "3.4.0"
twox-hash = "1.6.3"
yaml-rust = "0.4.5"

[dev-dependencies]
assert_cmd = "2.0.10"
